contact-list: Don't crash if a contact is already in the roster

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=47005